--- a/package.json
+++ b/package.json
@@ -11,7 +11,11 @@
   "dependencies": {
     "@iconify-json/mdi": "^1.1.68",
     "@unocss/preset-icons": "^0.62.3",
+    "animate.css": "^4.1.1",
     "classnames": "^2.5.1",
+    "dayjs": "^1.11.13",
+    "jotai": "^2.9.3",
+    "lodash-es": "^4.17.21",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-router-dom": "^6.26.0",
@@ -22,6 +26,7 @@
     "@babel/preset-env": "^7.25.3",
     "@eslint/js": "^9.8.0",
     "@types/eslint__js": "^8.42.3",
+    "@types/lodash-es": "^4.17.12",
     "@types/node": "^22.2.0",
     "@types/react": "^18.3.3",
     "@types/react-dom": "^18.3.0",
